<resources>
    <string name="app_name">ToBeBetter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="url">http://192.168.0.104:8080</string>
    <string name="propose">propose</string>
    <string name="create">create</string>
    <string name="find_all">findAll</string>

    <string name="start">开始</string>
    <string name="submit">提交</string>
    <string name="end">结束</string>
    <string name="stop">停止</string>
    <string name="continue_">继续</string>
    <string name="close">关闭</string>
    <string name="save">保存</string>
    <string name="saveAndNext">保存并下次使用</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="login">登陆</string>
    
    <string name="minute">分钟</string>
    <string name="second">秒</string>

    <string name="login_username">邮箱/用户ID</string>
    <string name="login_password">登陆密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_regist">注册用户</string>

    <string name="login_qq">QQ登陆</string>
    <string name="login_wechart">微信登陆</string>
    <string name="howtoconnect">Email/QQ</string>
    <string name="propose_message">意见或建议</string>

    <string name="whathavedone">完成了什么？</string>

    <string name="save_as_time">保存为定时</string>
</resources>
