<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="100dp"
        android:paddingRight="100dp">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username" />

        <EditText
            android:id="@+id/login_passeord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_password" />

            <TextView
                android:id="@+id/login_regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_regist" />
        </LinearLayout>
        <Button
            android:id="@+id/login_buton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_wechat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_wechart" />

            <Button
                android:id="@+id/login_qq_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_qq" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>