<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<EditText
    android:id="@+id/propose_connect"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/howtoconnect"/>

    <EditText
        android:inputType="textMultiLine"
        android:minLines="8"
        android:id="@+id/propose_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/propose_message"/>
    <Button
        android:id="@+id/propose_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

    <Button
        android:id="@+id/propose_findAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_all"/>
</LinearLayout>
