<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/count_down_save_r">

    <TextView
        android:layout_alignParentTop="true"
        android:id="@+id/count_down_save_title"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/app_top_pading"
        android:text="定时任务完成"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/count_down_save_during"
            android:layout_centerHorizontal="true"
            android:text="30分钟"
            android:layout_alignBottom="@id/count_down_save_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/count_down_save_content"
            android:layout_centerHorizontal="true"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:layout_alignBottom="@id/count_down_save_during"
            android:layout_width="match_parent"
            android:hint="@string/whathavedone"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/count_down_save_linear_h"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@id/count_down_save_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/count_down_save_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"/>
            <Button
                android:id="@+id/count_down_save_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>
        <Button
            android:id="@+id/count_down_save_reuse"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_alignBottom="@id/count_down_save_linear_h"
            android:text="@string/saveAndNext"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>